<resources>
  <string name="app_name">shurjoPay Agent</string>
  <string name="title_home">Home</string>
  <string name="title_merchants">Merchants</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="attendance">Attendance\n</string>
  <string name="exit">Exit\n</string>
  <string name="new_merchant">New\nMerchant</string>
  <string name="synchronize">Synchronize\n</string>
  <string name="change_password">Change Password</string>
  <string name="personal_info">Personal Info</string>
  <string name="shop_info">Shop Info</string>
  <string name="a_c_info">A/C Info</string>
  <string name="save_next"><![CDATA[Save & Next]]></string>
  <string name="shop_owner_name">Shop Owner Name*</string>
  <string name="contact_no">Contact No*</string>
  <string name="email">Email</string>
  <string name="nid_no">NID No*</string>
  <string name="tin">TIN</string>
  <string name="address">Address*</string>
  <string name="date_of_birth">Date of Birth (YYYY-MM-DD)*</string>
  <string name="shop_owner_image">Shop Owner Image</string>
  <string name="owner_image">Owner Image*</string>
  <string name="front_side_of_nid">Front Side of NID*</string>
  <string name="back_side_of_nid">Back Side of NID*</string>
  <string name="shop_owner_signature">Shop Owner Signature*</string>
  <string name="shop_business_name">Shop/Business Name*</string>
  <string name="shop_address">Shop Address*</string>
  <string name="shop_location">Shop Location*</string>
  <string name="division">Division*</string>
  <string name="district">District*</string>
  <string name="trade_license">Trade License</string>
  <string name="shop_front">Shop Front*</string>
  <string name="trade_license_no">Trade License No</string>
  <string name="nominee_name">Nominee Name*</string>
  <string name="father_s_name">Father\'s Name*</string>
  <string name="mother_s_name">Mother\'s Name*</string>
  <string name="relation">Relation*</string>
  <string name="nominee_image">Nominee Image*</string>
  <string name="existing_account">Existing Account</string>
  <string name="new_account">New Account</string>
  <string name="account_type">Account Type*</string>
  <string name="account_name">Account Name*</string>
  <string name="account_number">Account Number*</string>
  <string name="bank_name">Bank Name*</string>
  <string name="branch_name">Branch Name</string>
  <string name="routing_number">Routing Number</string>
  <string name="account_info">Account Info</string>
  <string name="account_category">Account Category*</string>
  <string name="existing">Existing</string>
  <string name="new_">New</string>
  <string name="mfs">MFS</string>
  <string name="mfs_name">MFS Name*</string>
  <string name="police_station">Police Station*</string>
  <string name="existing_bank">Existing Bank</string>
  <string name="unable_to_connect">Unable To Connect</string>
  <string name="unable_to_connect_please_try_again">Unable To Connect! Please Try Again</string>
  <string name="something_went_wrong">Something went wrong</string>
  <string name="shop_info_not_found">Shop info not found</string>
  <string name="account_info_not_found">Account info not found</string>
  <string name="login">Login</string>
  <string name="password">Password*</string>
  <string name="username">Username*</string>
  <string name="this_field_is_required">This field is required</string>
  <string name="turn_on_gps_and_refresh_location">Turn on GPS and refresh location</string>
  <string name="mobile_number_is_invalid">Mobile number is invalid</string>
  <string name="contact_number_is_invalid">Contact number is invalid</string>
  <string name="email_is_invalid">Email is invalid</string>
  <string name="nid_is_invalid">NID is invalid</string>
  <string name="mobile_number_or_password_did_not_match">Mobile number or password did not match!</string>
  <string name="capture_shop_owner_image">Capture shop owner image</string>
  <string name="capture_nominee_image">Capture nominee image</string>
  <string name="capture_front_side_of_nid">Capture front side of NID</string>
  <string name="capture_back_side_of_nid">Capture back side of NID</string>
  <string name="capture_shop_owner_signature">Capture shop owner signature</string>
  <string name="capture_trade_license_image">Capture trade license image</string>
  <string name="capture_shop_front_image">Capture shop front image</string>
  <string name="next">Next</string>
  <string name="business_type">Business Type*</string>
  <string name="shop_size">Shop Size*</string>
  <string name="father_husband_s_name">Father/Husband\'s Name*</string>
  <string name="occupation">Occupation*</string>
  <string name="submit">Submit</string>
  <string name="district_name">%s,</string>
  <string name="location">%f, %f</string>
  <string name="location_not_found">Location Not Found</string>
  <string name="getting_location">Getting Location…</string>
  <string name="title_activity_merchant_details">MerchantDetailsActivity</string>
  <string name="n_a">N/A</string>
  <string name="success">Success</string>
  <string name="merchant_created_successfully">Merchant created successfully</string>
  <string name="view_details">View Details</string>
  <string name="merchant_details">Merchant Details</string>
  <string name="edit">Edit</string>
  <string name="update">Update</string>
  <string name="edit_personal_info">Edit Personal Info</string>
  <string name="edit_shop_info">Edit Shop Info</string>
  <string name="edit_account_info">Edit Account Info</string>
  <!-- [START fcm_default_icon_string] -->
  <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
  <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
  <string name="default_notification_channel_name" translatable="true">Weather</string>
  <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
  <string name="fcm_message">FCM Message</string>
  <!-- [END fcm_default_icon_string] -->
</resources>
