<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PersonalInfoDetailsFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/shop_owner_name"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/ownerNameTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Shop Owner Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/father_husband_s_name"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/fathersNameTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Father's Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/mother_s_name"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/mothersNameTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Mothers Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/contact_no"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/contactNoTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="01234567890" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/email"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/emailTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="shop_owner@gmail.com" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nid_no"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/nidTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="12254568895778965" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/date_of_birth"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/dobTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="1971-12-16" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tin"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/tinTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="1234567890123456789" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/address"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/addressTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="43 Mohakhali C/A" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/division"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/divisionTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Dhaka" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/district"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/districtTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Dhaka" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/police_station"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/policeStationTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          tools:text="Gulshan" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:background="#DDDDDD">

      <TextView
          android:id="@+id/ownerImageTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/owner_image"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardCornerRadius="4dp"
          app:cardElevation="4dp"
          android:layout_marginTop="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/ownerImageTextView">

        <ImageView
            android:contentDescription="@string/owner_image"
            android:id="@+id/ownerImageView"
            android:layout_width="240dp"
            android:layout_height="320dp"
            android:src="@drawable/ic_baseline_person_24" />
      </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:background="#DDDDDD">

      <TextView
          android:id="@+id/ownerNIDFrontTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/front_side_of_nid"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardCornerRadius="4dp"
          app:cardElevation="4dp"
          android:layout_marginTop="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/ownerNIDFrontTextView">

        <ImageView
            android:contentDescription="@string/front_side_of_nid"
            android:id="@+id/ownerNIDFrontImageView"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_credit_card_24" />
      </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:background="#DDDDDD">

      <TextView
          android:id="@+id/ownerNIDBackTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/back_side_of_nid"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardCornerRadius="4dp"
          app:cardElevation="4dp"
          android:layout_marginTop="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/ownerNIDBackTextView">

        <ImageView
            android:contentDescription="@string/back_side_of_nid"
            android:id="@+id/ownerNIDBackImageView"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_credit_card_24" />
      </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:background="#DDDDDD">

      <TextView
          android:id="@+id/ownerSignatureTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/shop_owner_signature"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardCornerRadius="4dp"
          app:cardElevation="4dp"
          android:layout_marginTop="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/ownerSignatureTextView">

        <ImageView
            android:contentDescription="@string/shop_owner_signature"
            android:id="@+id/ownerSignatureImageView"
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_baseline_gesture_24" />
      </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</ScrollView>
